# stateful-tui

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md
examples/pets/: main.rs
src/: context.rs  error.rs  lib.rs  tui.rs
src/canvas/: crossterm.rs  mod.rs
src/components/: border.rs  fragment.rs  mod.rs  span.rs
src/context/: children.rs  effects.rs  mod.rs  state.rs
src/draw/: mod.rs
