[package]
name = "stateful-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"

crossterm = "0.23"

async-std = "1.10"
futures = "0.3.21"

[dev-dependencies]
env_logger = "0.9"
